<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /**
  ~ * Copyright (C) Open 2014 Whisper Systems
  ~ *
  ~ * This program is free software: you can redistribute it and/or modify
  ~ * it under the terms of the GNU General Public License as published by
  ~ * the Free Software Foundation, either version 3 of the License, or
  ~ * (at your option) any later version.
  ~ *
  ~ * This program is distributed in the hope that it will be useful,
  ~ * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ * GNU General Public License for more details.
  ~ *
  ~ * You should have received a copy of the GNU General Public License
  ~ * along with this program. If not, see <http://www.gnu.org/licenses/>.
  ~ */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical"
            android:background="#58ff8800">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/big_flock_icon"/>

            <TextView android:id="@+id/cost_per_year"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:layout_marginBottom="8dp"
                      android:fontFamily="sans-serif-light"
                      android:textAppearance="?android:textAppearanceMedium"
                      android:textSize="32sp"
                      android:text="@string/usd_per_year"/>

            <TextView android:id="@+id/payment_process_explanation"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="16dip"
                      android:layout_marginRight="16dip"
                      android:textAppearance="?android:textAppearanceMedium"
                      android:textSize="17sp"
                      android:text="@string/with_auto_renew_flock_automatically_charges_your_card_before"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip">

            <EditText android:id="@+id/card_number"
                      android:singleLine="true"
                      android:maxLines="1"
                      android:layout_height="48dp"
                      android:layout_width="match_parent"
                      android:drawableLeft="@drawable/icon_card"
                      android:drawablePadding="8dp"
                      android:inputType="number"
                      android:hint="@string/hint_card_number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <EditText android:id="@+id/card_expiration"
                          android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="1"
                          android:drawableLeft="@drawable/icon_calendar"
                          android:drawablePadding="8dp"
                          android:singleLine="true"
                          android:maxLines="1"
                          android:inputType="date"
                          android:hint="@string/hint_card_expiration" />

                <EditText android:id="@+id/card_cvc"
                          android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="1"
                          android:drawableLeft="@drawable/icon_lock"
                          android:drawablePadding="8dp"
                          android:singleLine="true"
                          android:maxLines="1"
                          android:inputType="number"
                          android:hint="@string/hint_card_cvc" />

            </LinearLayout>

            <CheckBox android:id="@+id/checkbox_enable_auto_renew"
                      android:layout_width="wrap_content"
                      android:layout_height="48dp"
                      android:textAppearance="?android:textAppearanceLarge"
                      android:text="@string/enable_autorenew"/>

            </LinearLayout>

    </LinearLayout>

    <View android:background="?android:attr/dividerHorizontal"
          android:layout_height="1dp"
          android:layout_width="match_parent" />

    <LinearLayout style="?android:attr/buttonBarStyle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <Button android:id="@+id/button_verify_and_save"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/selectable_item_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_verify_and_save" />

    </LinearLayout>

</LinearLayout>