<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="16dip">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:layout_marginLeft="16dip"
                  android:layout_marginRight="16dip">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:textAppearanceMedium"
                  android:text="@string/unable_to_login_to_sync_service_please_correct_your_password"
                  android:layout_marginBottom="16dp"/>

        <EditText android:id="@+id/account_password"
                  android:singleLine="true"
                  android:maxLines="1"
                  android:layout_width="match_parent"
                  android:layout_height="48dip"
                  android:inputType="textPassword"
                  android:hint="@string/hint_password"/>

    </LinearLayout>

    <View android:background="?android:attr/dividerHorizontal"
          android:layout_height="1dp"
          android:layout_width="match_parent" />

    <LinearLayout style="?android:attr/buttonBarStyle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <Button android:id="@+id/login_button"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/selectable_item_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save_password" />

    </LinearLayout>

</LinearLayout>
