<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout style="@style/WizardPageContainer">

        <EditText android:id="@+id/href_webdav_host"
                  android:singleLine="true"
                  android:maxLines="1"
                  android:layout_width="match_parent"
                  android:layout_height="48dip"
                  android:inputType="textUri"
                  android:hint="@string/hint_href_webdav_host" />

        <EditText android:id="@+id/account_username"
                  android:singleLine="true"
                  android:maxLines="1"
                  android:layout_width="match_parent"
                  android:layout_height="48dip"
                  android:inputType="textEmailAddress"
                  android:hint="@string/hint_username" />

        <EditText android:id="@+id/account_password"
                  android:singleLine="true"
                  android:maxLines="1"
                  android:layout_width="match_parent"
                  android:layout_height="48dip"
                  android:inputType="textPassword"
                  android:hint="@string/hint_password" />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical" android:gravity="center_vertical" android:layout_marginTop="16dp"
                      android:layout_marginBottom="16dp">

            <RelativeLayout android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="48dp">

                <TextView android:id="@+id/text_current_test"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge"
                          android:text="@string/tests_not_yet_started"
                          android:layout_alignParentLeft="true"
                          android:layout_alignParentBottom="true"
                          android:layout_alignWithParentIfMissing="false"
                          android:layout_alignParentRight="false" android:singleLine="true"/>

                <ImageView android:id="@+id/image_current_test_failed"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentRight="true"
                           android:layout_alignParentStart="false"
                           android:layout_alignParentEnd="false"
                           android:layout_alignParentBottom="true"
                           android:visibility="gone"
                           android:src="@drawable/alert_error_dark"/>

            </RelativeLayout>

            <ProgressBar android:id="@+id/progress_server_tests"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         style="?android:attr/progressBarStyleHorizontal"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
